// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel base render correctly 1`] = `
<div>
  <div
    class="mcore-carousel mcore-carousel--horizontal"
  >
    <div
      class="mcore-carousel__items"
    >
      <div
        class="mcore-carousel__item"
      >
        0
      </div>
      <div
        class="mcore-carousel__item"
      >
        1
      </div>
      <div
        class="mcore-carousel__item"
      >
        2
      </div>
    </div>
    <div
      class="mcore-carousel__pagination"
    >
      <div
        class="mcore-carousel__pagination__item mcore-carousel__pagination__item--active"
      />
      <div
        class="mcore-carousel__pagination__item"
      />
      <div
        class="mcore-carousel__pagination__item"
      />
    </div>
  </div>
  <div
    class="mcore-carousel mcore-carousel--horizontal"
  >
    <div
      class="mcore-carousel__items"
    />
    <div
      class="mcore-carousel__pagination"
    />
  </div>
  <div
    class="mcore-carousel mcore-carousel--horizontal"
  >
    <div
      class="mcore-carousel__items"
    />
    <div
      class="mcore-carousel__pagination"
    />
  </div>
  <div
    class="mcore-carousel mcore-carousel--horizontal"
  >
    <div
      class="mcore-carousel__items"
    >
      <div
        class="mcore-carousel__item"
      >
        0
      </div>
    </div>
    <div
      class="mcore-carousel__pagination"
    >
      <div
        class="mcore-carousel__pagination__item mcore-carousel__pagination__item--active"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel className render correctly 1`] = `
<div
  class="mcore-carousel mcore-wrapper-test mcore-carousel--horizontal"
>
  <div
    class="mcore-carousel__items"
  />
  <div
    class="mcore-carousel__pagination"
  />
</div>
`;

exports[`Carousel componentWillReceiveProps 1`] = `
<div
  class="mcore-carousel mcore-carousel--horizontal"
>
  <div
    class="mcore-carousel__items"
  >
    <div
      class="mcore-carousel__item"
    >
      1
    </div>
    <div
      class="mcore-carousel__item"
    >
      2
    </div>
  </div>
  <div
    class="mcore-carousel__pagination"
  >
    <div
      class="mcore-carousel__pagination__item"
    />
    <div
      class="mcore-carousel__pagination__item mcore-carousel__pagination__item--active"
    />
  </div>
</div>
`;

exports[`Carousel height render correctly 1`] = `
<div
  class="mcore-carousel mcore-carousel--vertical"
>
  <div
    class="mcore-carousel__items"
    style="height:150px"
  >
    <div
      class="mcore-carousel__item"
    >
      0
    </div>
    <div
      class="mcore-carousel__item"
    >
      1
    </div>
    <div
      class="mcore-carousel__item"
    >
      2
    </div>
  </div>
  <div
    class="mcore-carousel__pagination"
  >
    <div
      class="mcore-carousel__pagination__item mcore-carousel__pagination__item--active"
    />
    <div
      class="mcore-carousel__pagination__item"
    />
    <div
      class="mcore-carousel__pagination__item"
    />
  </div>
</div>
`;

exports[`Carousel pagination render correctly 1`] = `
<div>
  <div
    class="mcore-carousel mcore-carousel--horizontal"
  >
    <div
      class="mcore-carousel__items"
    >
      <div
        class="mcore-carousel__item"
      >
        0
      </div>
      <div
        class="mcore-carousel__item"
      >
        1
      </div>
      <div
        class="mcore-carousel__item"
      >
        2
      </div>
    </div>
    <div
      class="mcore-carousel__pagination"
    >
      <div
        class="mcore-carousel__pagination__item mcore-carousel__pagination__item--active"
      />
      <div
        class="mcore-carousel__pagination__item"
      />
      <div
        class="mcore-carousel__pagination__item"
      />
    </div>
  </div>
  <div
    class="mcore-carousel mcore-carousel--horizontal"
  >
    <div
      class="mcore-carousel__items"
    >
      <div
        class="mcore-carousel__item"
      >
        0
      </div>
      <div
        class="mcore-carousel__item"
      >
        1
      </div>
      <div
        class="mcore-carousel__item"
      >
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel prefixCls render correctly 1`] = `
<div
  class="mcore-test mcore-test--horizontal"
>
  <div
    class="mcore-test__items"
  >
    <div
      class="mcore-test__item"
    >
      0
    </div>
  </div>
  <div
    class="mcore-test__pagination"
  >
    <div
      class="mcore-test__pagination__item mcore-test__pagination__item--active"
    />
  </div>
</div>
`;

exports[`Carousel style render correctly 1`] = `
<div
  class="mcore-carousel mcore-carousel--horizontal"
  style="background:red"
>
  <div
    class="mcore-carousel__items"
  />
  <div
    class="mcore-carousel__pagination"
  />
</div>
`;

exports[`Carousel swipeable 1`] = `
<Carousel
  activeIndex={0}
  animationDuration={300}
  autoPlay={false}
  autoPlayIntervalTime={3000}
  direction="left"
  height={160}
  loop={false}
  moveDistanceRatio={0.5}
  moveTimeSpan={300}
  prefixCls="mcore-carousel"
  showPagination={true}
  swipeable={false}
>
  <div
    className="mcore-carousel mcore-carousel--horizontal"
  >
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        className="mcore-carousel__items"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        onTransitionEnd={[Function]}
        style={Object {}}
      >
        <div
          className="mcore-carousel__item"
          key=".$0"
        >
          0
        </div>
        <div
          className="mcore-carousel__item"
          key=".$1"
        >
          1
        </div>
        <div
          className="mcore-carousel__item"
          key=".$2"
        >
          2
        </div>
      </div>
    </Drag>
    <div
      className="mcore-carousel__pagination"
    >
      <div
        className="mcore-carousel__pagination__item mcore-carousel__pagination__item--active"
        key="pagination-0/.$0"
        onClick={[Function]}
      />
      <div
        className="mcore-carousel__pagination__item"
        key="pagination-1/.$1"
        onClick={[Function]}
      />
      <div
        className="mcore-carousel__pagination__item"
        key="pagination-2/.$2"
        onClick={[Function]}
      />
    </div>
  </div>
</Carousel>
`;
